--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-runtime": "^6.23.0"
   }
 }
